fixing tabs on ie

--- a/source/ash/oah/css/site.css.scss
+++ b/source/ash/oah/css/site.css.scss
@@ -151,7 +151,8 @@ img {
           }
         }
         &.ui-tabs-selected a {
-          background: white;
+          background: #fff;
+          filter: none;
         }
       }
     }
